# AttosecondRaytracing

./: .directory  .gitignore  .gitmodules  ARTenvironment.yml  ARTmain.py  CHANGES  CONFIG_2toroidals_f-x-f.py  CONFIG_2toroidals_twisted.py  CONFIG_CollimatingTelescope.py  CONFIG__template.py  CONFIG_singleparabola.py  CONFIG_toroidal2f-2f.py  CONFIG_toroidal2f-2f_byhand.py  README.md  TODO  TODO_ART  myCONFIG_2toroidals_2f-4f-2f_twisted.py  myCONFIG_2toroidals_f-x-f.py  myCONFIG_3toroidals_microfocusing_ala_Poletto.py  myCONFIG_Cylindrical.py  myCONFIG_SN2-Collimation.py  myCONFIG_XUVtransport_2parabolas_for_ELI.py  myCONFIG_focus+recollimate_for ELI-PM.py  myCONFIG_singlespherical.py  myCONFIG_toroidal+spherical.py  myCONFIG_toroidal2f-2f.py
ART/: DefaultOptions.py  ModuleAnalysisAndPlots.py  ModuleAnalysisAndPlots.py.orig  ModuleDefects.py  ModuleDefects.py.orig  ModuleDetector.py  ModuleGeometry.py  ModuleMask.py  ModuleMirror.py  ModuleOpticalChain.py  ModuleOpticalElement.py  ModuleOpticalRay.py  ModuleProcessing.py  ModuleSource.py  ModuleSupport.py  __init__.py
AttosecondRayTracing/: README.md  pyproject.toml
AttosecondRayTracing/src/ART/: ARTmain.py  ModuleAnalysis.py  ModuleAnalysisAndPlots.py  ModulePlottingMethods.py  ModulePlottingUtilities.py  ModuleTolerancing.py  __init__.py
AttosecondRayTracing_core/: README.md  pyproject.toml
docs/: .directory  ART.html  build.py  index.html  search.js
examples/: CONFIG_2toroidals_f-x-f.py  CONFIG_2toroidals_twisted.py  CONFIG_CollimatingTelescope.py  CONFIG__template.py  CONFIG_deformed.py  myConfigELI.py  (+5 more)
(+182 files in other folders)
